clusters/eu001/apps/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd-eu001.smescloud.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
    - kind: Rule
      match: Host(`argocd-eu001.smescloud.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-eu001-tls
